welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: not found: type int
var nbPas:int = 0
          ^Variables:10: error: not found: value While
While (nbPas != 0) {
^